--- a/MidiController/MidiController.vcxproj.filters
+++ b/MidiController/MidiController.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="MidiProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LedsManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConfigurationManager.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MidiProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LedsManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
